Doc/0.3/06-selection/07_colorpicker_en.md
![RimUI Framework](../../../About/Preview.png)

**RimUI Framework** — core `0.8.31` · mod `0.3.1` · RimWorld `1.6`

---

[Table of contents](../index_en.md) - Selection | Previous: [CascadeSelect](06_cascadeselect_en.md) | Next: [Tag](../07-indicators/01_tag_en.md) | [Русский](07_colorpicker_ru.md)

---

# ColorPicker

A color selector with an HSB hue/saturation/brightness square, a hue strip, an alpha slider, and editable hex input. It does not include an eyedropper.

`RimUI.Components.ColorPicker : UiElement`

## Example

```csharp
new ColorPicker(c => _picked = c) { Value = () => _picked };
```

## Parameters

| Parameter | Type | Default | Description |
|---|---|---|---|
| `Key` | `string` | `null` | State key in the ID store (see "Keys and state" on the Architecture page). Needed when the element is recreated between frames, or when its state must survive such recreation. |
| `Value` | `Func<ColorRGBA>` | `null` | Source of the current color. |
| `OnChange` | `Action<ColorRGBA>` | `null` | Change callback. |
| `Disabled` | `bool` | `false` | Disables the control. |
| `Placement` | `OverlayPlacement` | `Bottom` | Which side the panel opens on: `Bottom`, `Top`, `Right`, `Left`, `Auto` (downwards, or upwards when there is not enough room). |
| `Align` | `OverlayAlign` | `Start` | Alignment along the other axis: `Start`, `Center`, `End`, `Auto`. `End` pins the panel's right edge to the field's right edge, so it runs to the left. |
| `ShowHex` | `bool` | `true` | Shows editable hex input below the palette. |
| `ShowAlpha` | `bool` | `true` | Shows the alpha strip and includes alpha in hex input. |
| `FieldWidth` | `float` | `44` | Color swatch field width. |
| `FieldHeight` | `float` | `24` | Color swatch field height. |
| `SquareW` | `float` | `160` | HSB square width. |
| `SquareH` | `float` | `120` | HSB square height. |
| `HueW` | `float` | `16` | Hue and alpha strip width. |


## Where the panel opens

The direction is set along two independent axes: `Placement` - which side of the field the panel
sits on, `Align` - how it lines up along the other axis. The pair covers all eight combinations:

| What you want | How to set it |
|---|---|
| downwards, left edges aligned | `Placement = Bottom` (the default) |
| upwards | `Placement = Top` |
| **up and to the left** | `Placement = Top`, `Align = End` |
| downwards, centred on the field | `Align = Center` |
| sideways (a submenu) | `Placement = Right` or `Left` |

`Auto` on either axis means "pick it yourself": the side flips to the opposite one when there is
not enough room.

**Room is measured against the visible area, not just the window.** A list inside a table or a
scroll area opens where it can be seen. Clamping the panel to the cell's bounds is out of the
question, though - it would have nowhere to open - so it extends past them freely.

**Alignment only shows when the widths differ.** If the panel is exactly as wide as the field,
`Start`, `Center` and `End` all look the same.


Theme slots: `colorpicker/field` for the swatch border and `colorpicker/panel` for the sprite-capable panel. The HSB square and strips use custom gradients rather than sprites.

## Methods

| Method | Returns | Description |
|---|---|---|
| `ColorPicker(Action<ColorRGBA> onChange = null)` (constructor) | - | Creates a color picker with a callback. |
| `GetValue()` | `ColorRGBA` | Returns `Value` when supplied, otherwise the latest cached color or the value from `SetValue`. This component uses `GetValue`/`SetValue` even though it also raises `Events.SelectionChanged`. |
| `SetValue(ColorRGBA v)` | - | Sets the color programmatically. Without `Value`, updates internal HSB state on the next frame; always calls `OnChange`. |
| `SetStyle(string path, string value)` | - | Applies a theme-style path such as `"colorpicker.field.bordercolor"` to the element itself. Unknown paths and invalid values are ignored. |

## Events

| Event | Type | Parameters | When it fires |
|---|---|---|---|
| `OnChange` | `Action<ColorRGBA>` | new color | The HSB square or a strip is dragged, or valid hex input is committed. |
| `Events.HoverEnter` / `Events.HoverLeave` | `UiEventHandler` | `data.MousePosition` | The pointer enters or leaves the element bounds, once per transition. |
| `Events.Hover` | `UiEventHandler` | `data.MousePosition` | Every frame while hovered. Keep the handler lightweight and avoid allocations, searches, or I/O. |
| `Events.Click` / `Events.RightClick` | `UiEventHandler` | `data.MousePosition` | Left or right click on the element. |
| `Events.Scroll` | `UiEventHandler` | `data.ScrollDelta` | The mouse wheel is used over the element. |
| `Events.DisabledChanged` | `UiEventHandler` | `data.Disabled` | Effective enabled state changes. |
| `Events.SelectionChanged` | `UiEventHandler` | `data.SelectedIndex`, `data.SelectedValue` | The color changes after `OnChange`. Index is always `-1`; value is the new boxed `ColorRGBA`. |

## Feature support

| Feature | Supported | Notes |
|---|---|---|
| Style | Yes | `colorpicker/field` and `colorpicker/panel`. |
| Sprite frame | Yes (panel only) | `colorpicker/panel` may use a sprite. |
| Animation | Yes | Shared `Style.Animation` system. |
| Disabled | Yes | Dims the swatch and frame and prevents the panel from opening. |
| Hover fade | No | No smooth hover transition. |


---

[Table of contents](../index_en.md) - Selection | Previous: [CascadeSelect](06_cascadeselect_en.md) | Next: [Tag](../07-indicators/01_tag_en.md) | [Русский](07_colorpicker_ru.md)
## Support the author
If you enjoy RimUI Framework, you can support its development here:

[DonationAlerts](https://www.donationalerts.com/r/klimprog)
[Boosty](https://boosty.to/klimprog/donate)

**USDT (TRC20):** `TA4zq9F4TTrSQXjEESMBk8juQMGNLXX4B5`

Thank you! ❤️
